commit about forms and Database

--- a/web/index.html
+++ b/web/index.html
@@ -87,7 +87,7 @@
                         <div class="text-container">
                             <h1 class="h1-large">Estrutura de Dados</h1>
                             <p class="p-large">Venha aprender mais sobre Estrutura de Dados</p>
-                            <a class="btn-solid-lg" href="sign-up.html">Cadastre-se</a>
+                            <a class="btn-solid-lg" href="../Formulario Prog ED/Formulario Prog ED/formulario-main/form.html">Cadastre-se</a>
                             
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
