--- a/Formulario Prog ED/Formulario Prog ED/formulario-main/form.html
+++ b/Formulario Prog ED/Formulario Prog ED/formulario-main/form.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Formulario</title>
+  <title>Cadastre-se</title>
   
   
 </head>
@@ -28,7 +28,7 @@
 	<div class="form-container sign-in-container">
 		
 		<form method="POST" action="../Banco/Conexão/Cadastro.php">
-				<h1>Formulario</h1>
+				<h1>Cadastre-se</h1>
 				
 				<input type="Nome" maxlength="50" placeholder="Nome"  name="inputCadastroNome" />
 				<input type="email" placeholder="Email" name="inputCadastroemail" />
@@ -41,14 +41,14 @@
 	<div class="overlay-container">
 		<div class="overlay">
 			<div class="overlay-panel overlay-left">
-				<h1>Voltar para o Formulario</h1>
-				<p>Conclua o Formulario.</p>
+				<h1>Cadastre-se</h1>
+				
 				<button class="ghost" id="signIn">Voltar</button>
 			</div>
 			<div class="overlay-panel overlay-right">
 				<h1>Login</h1>
-				<p>Depois que concluir o Formulario,pode acessar o seu login</p>
-				<button class="ghost" id="signUp">Logar</button>
+				<p>Entre em seu login</p>
+				<button class="ghost" id="signUp">Entre</button>
 			</div>
 		</div>
 	</div>
