commit inserinto link do reporsitório do github nas páginas e começando a abrir a tag cod

--- a/web/lista.html
+++ b/web/lista.html
@@ -200,6 +200,14 @@
                                 <i class="fab fa-instagram fa-stack-1x"></i>
                             </a>
                         </span>
+
+                        <span class="fa-stack">
+                            <a href="https://github.com/Yan0606/Ambiente-E.D" target="_blank">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-github fa-stack-1x"></i>
+                            </a>
+                        </span>
+
                         <strong>www.fatecsp.br</strong></a></p>
                     </div> <!-- end of footer-col -->
                 </div> <!-- end of col -->
