--- a/web/article.html
+++ b/web/article.html
@@ -61,6 +61,9 @@
                         <li class="nav-item">
                             <a class="nav-link page-scroll" href="index.html#details">Manual de Instalação</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link page-scroll" href="#quiz">Quiz</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Assuntos</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown01">
