nova logo para a pagina inicial

--- a/web/index.html
+++ b/web/index.html
@@ -96,7 +96,7 @@
                     </div> <!-- end of col -->
                     <div class="col-lg-7">
                         <div class="image-container">
-                            <img class="img-fluid" src="images/arvore.png" alt="alternative">
+                            <img class="img-fluid" src="images/logodiogo.png" alt="alternative" width="400px">
                         </div> <!-- end of image-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
