--- a/web/listaDupla.html
+++ b/web/listaDupla.html
@@ -272,7 +272,7 @@
                 <div class="col-lg-12">
                     <div class="footer-col first">
                         <h6>Desenvolvimento</h6>
-                        <p class="p-small">Desenvolvido por: <a href="https://github.com/Yan0606" target="_blank">Yan Andrade</a>, Adryan Freire, Diogo Neves e Arthur Marques, estudantes de Análise e Desenvolvimento de Sistemas da Fatec de Presidente Prudente.</p>                            Desenvolvimento de Sistemas da Fatec de Presidente Prudente.</p>
+                        <p class="p-small">Desenvolvido por: <a href="https://github.com/Yan0606" target="_blank">Yan Andrade</a>, Adryan Freire, Diogo Neves e Arthur Marques, estudantes de Análise e Desenvolvimento de Sistemas da Fatec de Presidente Prudente.</p>                            
                     </div> <!-- end of footer-col -->
                     <div class="footer-col second">
                         <h6>Auxilio e Direção </h6>
