--- a/web/article.html
+++ b/web/article.html
@@ -183,7 +183,7 @@
                                 </a>
                             </span>
 
-                            <strong>www.fatecsp.br</strong></a></p>
+                            <a href="www.fatecsp.br"><strong>Fatec</strong></a></p>
                         </div> <!-- end of footer-col -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
