--- a/web/tad.html
+++ b/web/tad.html
@@ -168,7 +168,7 @@
                                 <i class="fab fa-github fa-stack-1x"></i>
                             </a>
                         </span>
-                        <strong>www.fatecsp.br</strong></a></p>
+                        <a href="www.fatecsp.br"><strong>Fatec</strong></a></p>
                     </div> <!-- end of footer-col -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
