--- a/web/index.html
+++ b/web/index.html
@@ -413,7 +413,7 @@
 
                           
 
-                            <strong>www.fatecsp.br</strong></a></p>
+                            <a href="www.fatecsp.br"><strong>Fatec</strong></a></p>
                         </div> <!-- end of footer-col -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
