--- a/web/quiz.html
+++ b/web/quiz.html
@@ -16,7 +16,7 @@
     <div class="info_box">
         <div class="info-title"><span>INFORMAÇÕES</span></div>
         <div class="info-list">
-            <div class="info">1.<span>15 s</span> AQUI</div>
+            <div class="info">1.<span>15s</span> AQUI</div>       <!-- COLOCAR INFORMAÇÕES DO QUE O JOGADOR PRECISA SABER ANTES DE COMEÇAR O QUIZ! -->  
             <div class="info">2.SLA.</div>
             <div class="info">3. SLA.</div>
             <div class="info">4. SLA.</div>
