adicionando novos links para futuras novas páginas no dropdown || criando o arquivo fila.html || e adicionando um link do site da fatec sp com target blank

--- a/web/fila.html
+++ b/web/fila.html
@@ -77,7 +77,7 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item page-scroll" href="listaDupla.html">Lista Dupla</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
+                            <a class="dropdown-item page-scroll" href="listaDupla.html">Fila FIFO</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item page-scroll" href="listaDupla.html">Pilha Encadeada</a>
                         </div>
@@ -95,7 +95,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <h1>Listas Duplamente Encadeadas</h1>
+                    <h1>Fila Encadeada FIFO</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
