--- a/web/index.html
+++ b/web/index.html
@@ -69,9 +69,13 @@
                             <div class="dropdown-menu" aria-labelledby="dropdown01">
                                 <a class="dropdown-item page-scroll" href="tad.html">TAD</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="lista.html">Listas Encadeadas</a>
+                                <a class="dropdown-item page-scroll" href="lista.html">Listas Simples</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item page-scroll" href="listaDupla.html">Lista Dupla</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="listaDupla.html">Pilha Encadeada</a>
                             </div>
                         </li>
                     </ul>
