--- a/web/lista.html
+++ b/web/lista.html
@@ -69,14 +69,17 @@
                         <a class="nav-link page-scroll" href="#quiz">Quiz</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Assuntos</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Assuntos</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item page-scroll" href="tad.html">TAD</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="lista.html">Lista simples </a>
+                            <a class="dropdown-item page-scroll" href="lista.html">Listas Simples</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item page-scroll" href="listaDupla.html">Lista Dupla</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="listaDupla.html">Pilha Encadeada</a>
                         </div>
                     </li>
                 </ul>
