--- a/web/tad.html
+++ b/web/tad.html
@@ -69,9 +69,13 @@
                             <div class="dropdown-menu" aria-labelledby="dropdown01">
                                 <a class="dropdown-item page-scroll" href="tad.html">TAD</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="lista.html">Lista Simples</a>
+                                <a class="dropdown-item page-scroll" href="lista.html">Listas Simples</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item page-scroll" href="listaDupla.html">Lista Dupla</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="listaDupla.html">Pilha Encadeada</a>
                             </div>
                         </li>
                     </ul>
@@ -168,7 +172,7 @@
                                 <i class="fab fa-github fa-stack-1x"></i>
                             </a>
                         </span>
-                        <a href="www.fatecsp.br"><strong>Fatec</strong></a></p>
+                        <a href="http://www.fatecsp.br" target="_blank"><strong>Fatec</strong></a></p>
                     </div> <!-- end of footer-col -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
