inserindo a primeira imagem com responsividade básica a página de listaDupla

--- a/web/fila.html
+++ b/web/fila.html
@@ -138,7 +138,6 @@
                     </div>
 
 
-
                     <p class="mt-3 mb-4">Defina a classe para a fila encadeada.</p>
                     <div class="tag_code">
                         <p><code>public class FilaEncadeada<br>
@@ -256,13 +255,18 @@
     
     
                                 </code></p>
+
                     </div>
-                    <p class=" mt-4 mb-4">Neste exemplo, a classe NoFila representa um nó na fila com um campo de dado e
-                        uma referência
-                        para o próximo nó na fila. A classe FilaEncadeada mantém referências para
-                        o primeiro e o último nó na fila e fornece métodos Enqueue para adicionar
-                        elementos à fila e Dequeue para remover elementos da fila seguindo a política FIFO.
-                        O programa principal demonstra como usar a fila encadeada.
+                    <p class=" mt-4 mb-4">Neste exemplo, a classe NoFila representa um
+                        nó na fila com um campo de dado e uma referência para o próximo nó na fila. A classe
+                        FilaEncadeada mantém referências para o primeiro e o último nó na fila e fornece métodos Enqueue
+                        para adicionar elementos à fila e Dequeue para remover elementos da fila seguindo a política
+                        FIFO. O programa principal demonstra como usar a fila encadeada.
+
+
+
+
+
                     </p>
                 </div>
             </div> <!-- end of col -->
