--- a/web/listaDupla.html
+++ b/web/listaDupla.html
@@ -135,9 +135,8 @@
                         }<br></code></p>
                     </div>
 
-                    <div class="row"></div>
-                    <div class="col-lg-7">
-                        <img class="img-fluid" src="images/cod6.png" alt="alternative"> <!--ANIMAÇÃO-->
+                    <div id="dupla" class="col-lg-12">
+                        <img class="img-fluid" src="images/Duplamente1.png" alt="alternative"> <!--ANIMAÇÃO-->
                     </div>
 
                     <p class="mb-5">Nesse exemplo, temos uma classe que chamamos do No. A classe No representa um nó da
@@ -171,7 +170,7 @@
 
 
                     <div class="col-lg-7">
-                        <img class="img-fluid" src="images/cod7.png" alt="alternative">
+                        <img class="img-fluid" src="images/Duplamente2.png" alt="alternative">
                     </div>
 
 
@@ -209,7 +208,7 @@
                     </div>
 
                     <div class="col-lg-7">
-                        <img class="img-fluid" src="images/cod8.png" alt="alternative">
+                        <img class="img-fluid" src="images/Duplamente3.png" alt="alternative">
                     </div>
                     <p class="mb-2">Os métodos MostrarAvancar e MostrarRecuar percorrem a lista, imprimindo os elementos
                         na ordem direta e reversa, respectivamente.
