inserindo as animações da lista dupla e da lista simples

--- a/web/fila.html
+++ b/web/fila.html
@@ -121,6 +121,9 @@
 
                     <p> Crie uma classe, crie o "dado" para armazenar o nó e referencie o nó para o proximo da fila<br>
                     </p>
+                    <div class="col-lg-9">
+                        <img class="img-fluid" src="images/" alt="alternative">
+                    </div>
 
                     <div class="tag_code ">
                         <p><code>using System;<br>
