--- a/web/fila.html
+++ b/web/fila.html
@@ -78,9 +78,9 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item page-scroll" href="listaDupla.html">Lista Dupla</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="listaDupla.html">Fila FIFO</a>
+                            <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="listaDupla.html">Pilha Encadeada</a>
+                            <a class="dropdown-item page-scroll" href="pilhaEncadeada.html">Pilha Encadeada</a>
                         </div>
                     </li>
                 </ul>
