--- a/web/lista.html
+++ b/web/lista.html
@@ -80,7 +80,7 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="listaDupla.html">Pilha Encadeada</a>
+                            <a class="dropdown-item page-scroll" href="pilhaEncadeada.html">Pilha Encadeada</a>
                         </div>
                     </li>
                 </ul>
