--- a/web/tad.html
+++ b/web/tad.html
@@ -75,7 +75,7 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="listaDupla.html">Pilha Encadeada</a>
+                                <a class="dropdown-item page-scroll" href="pilhaEncadeada.html">Pilha Encadeada</a>
                             </div>
                         </li>
                     </ul>
