--- a/web/quiz.html
+++ b/web/quiz.html
@@ -17,10 +17,10 @@
         <div class="info-title"><span>INFORMAÇÕES</span></div>
         <div class="info-list">
             <div class="info">1.<span>15s</span> AQUI</div>       <!-- COLOCAR INFORMAÇÕES DO QUE O JOGADOR PRECISA SABER ANTES DE COMEÇAR O QUIZ! -->  
-            <div class="info">2.SLA.</div>
-            <div class="info">3. SLA.</div>
-            <div class="info">4. SLA.</div>
-            <div class="info">5. SLA.</div>
+            <div class="info2">2. RESPOSTA CORRETA = <span>COR VERDE</span></div>
+            <div class="info">3. RESPOSTA ERRADA = <span>COR VERMELHA</span></div>
+            <div class="info">4. FAÇA COM ATENÇÃO!</div>
+            <!-- <div class="info"></div> -->
         </div>
         <div class="buttons">
             <button class="quit">SAIR</button>
