--- a/web/quiz.html
+++ b/web/quiz.html
@@ -9,6 +9,7 @@
   
 </head>
 <body>
+    <a class="navbar-brand logo-image" href="index.html"><img src="images/logo1.png" alt="alternative"></a> 
   
     <div class="start_btn"><button>INICIAR</button></div>
 
