--- a/web/fila.html
+++ b/web/fila.html
@@ -122,7 +122,7 @@
                     <p> Crie uma classe, crie o "dado" para armazenar o nó e referencie o nó para o proximo da fila<br>
                     </p>
                     <div class="col-lg-9">
-                        <img class="img-fluid" src="images/" alt="alternative">
+                        <img class="img-fluid" src="images/Fila1.png" alt="alternative">
                     </div>
 
                     <div class="tag_code ">
