--- a/web/pilhaEncadeada.html
+++ b/web/pilhaEncadeada.html
@@ -160,7 +160,7 @@
                         <div class="col-lg-3">
                             <img class="img-fluid" src="images/Pilha1.png" alt="alternative"> <!--ANIMAÇÃO-->
                         </div>
-                    </div> <!--div row-->
+                    </div> <!-- end of div row-->
                     <h4 class="mb-2">Construtor da Pilha:</h4>
                     <ul>
                         <li>O construtor da classe PilhaEncadeada inicializa o topo como nulo, indicando que a pilha
@@ -186,9 +186,9 @@
                         <li> Ele percorre a pilha a partir do topo e imprime os valores dos nós.</li>
                         </p>
                     </ul>
-
-                    <div class="tag_code">
-                        <p><code>public void Push(int valor)<br>
+                    <div class="row">
+                        <div class="tag_code">
+                            <p><code>public void Push(int valor)<br>
                             {<br>
                                 &nbsp;&nbsp;&nbsp; No novoNo = new No(valor);<br>
                                 &nbsp;&nbsp;&nbsp;  novoNo.Proximo = topo;<br>
@@ -219,6 +219,10 @@
                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Console.WriteLine();<br>
                          &nbsp;&nbsp;&nbsp;   }<br>
                         }<br></code></p>
+                        </div>
+                        <div class="col-lg-5">
+                            <img class="img-fluid" src="images/Pilha2.png" alt="alternative"> <!--ANIMAÇÃO-->
+                        </div>
                     </div>
                     <h5 class="mb-1">Classe Program - Método Main:</h5>
                     <ul>
@@ -226,34 +230,41 @@
                     </ul>
                     <h6 class="mb-1">Empilhando Valores:</h6>
                     <ul>
-                        <li> Chamamos o método Push quatro vezes para adicionar os valores 1, 2, 3 e 4 à pilha, respectivamente
-                        .</li>
+                        <li> Chamamos o método Push quatro vezes para adicionar os valores 1, 2, 3 e 4 à pilha,
+                            respectivamente
+                            .</li>
                     </ul>
                     <h6 class="mb-2">Impressão da Pilha:</h6>
                     <ul>
-                        <li>Chamamos o método Print para imprimir o conteúdo da pilha, que será "Pilha: 4 3 2 1", pois os elementos são impressos na ordem em que foram empilhados.</li>
+                        <li>Chamamos o método Print para imprimir o conteúdo da pilha, que será "Pilha: 4 3 2 1", pois
+                            os elementos são impressos na ordem em que foram empilhados.</li>
                     </ul>
                     <h6 class="mb-2"> Desempilhando um Valor:</h6>
                     <ul>
-                        <li> Chamamos o método Pop para remover o elemento no topo da pilha (4, no caso) e armazenamos esse valor em valorRemovido.</li>
+                        <li> Chamamos o método Pop para remover o elemento no topo da pilha (4, no caso) e armazenamos
+                            esse valor em valorRemovido.</li>
                         </p>
                     </ul>
                     <h6 class="mb-2"> Imprimindo o Valor Removido:</h6>
                     <ul>
-                        <li> Imprimimos o valor removido usando Console.WriteLine, que mostrará "Valor removido: 4".</li>
+                        <li> Imprimimos o valor removido usando Console.WriteLine, que mostrará "Valor removido: 4".
+                        </li>
                         </p>
                     </ul>
                     <h6 class="mb-2"> Empilhando o Valor 10:</h6>
                     <ul>
-                        <li> Chamamos o método Push para adicionar o valor 10 à pilha.</li></p>
+                        <li> Chamamos o método Push para adicionar o valor 10 à pilha.</li>
+                        </p>
                     </ul>
                     <h6 class="mb-2"> Impressão Atualizada da Pilha:</h4>
-                    <ul>
-                        <li> Chamamos o método Print novamente para imprimir o conteúdo atualizado da pilha, que será "Pilha: 10 3 2 1".</li></p>
-                    </ul>
-
-                    <div class="tag_code">
-                        <p><code>class Program<br>
+                        <ul>
+                            <li> Chamamos o método Print novamente para imprimir o conteúdo atualizado da pilha, que
+                                será "Pilha: 10 3 2 1".</li>
+                            </p>
+                        </ul>
+                        <div class="row">
+                            <div class="tag_code">
+                                <p><code>class Program<br>
                             {<br>
                                 &nbsp;&nbsp;&nbsp;   static void Main()<br>
                                 &nbsp;&nbsp;&nbsp;  {<br>
@@ -275,7 +286,11 @@
                                     &nbsp;&nbsp;&nbsp;   }<br>
                             }
                         </code></p>
-                    </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <img class="img-fluid" src="images/Pilha3.png" alt="alternative"> <!--ANIMAÇÃO-->
+                            </div>
+                        </div>
                 </div>
             </div> <!-- end of col -->
         </div> <!-- end of row -->
