adicionando explicação sobre fila de prioridade

--- a/web/fila.html
+++ b/web/fila.html
@@ -266,10 +266,6 @@
                         para adicionar elementos à fila e Dequeue para remover elementos da fila seguindo a política
                         FIFO. O programa principal demonstra como usar a fila encadeada.
 
-
-
-
-
                     </p>
                 </div>
             </div> <!-- end of col -->
@@ -278,6 +274,21 @@
     </div> <!-- end of ex-basic-1 -->
     <!-- end of basic -->
 
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-10 offset-xl-1">
+                <h1>Fila de Prioridade FIFO</h1>
+                <p class=" mt-4 mb-4">Uma fila de prioridade FIFO (First-In-First-Out) é uma variação da fila encadeada
+                    que adiciona uma dimensão adicional de prioridade aos elementos armazenados. Enquanto em uma fila
+                    encadeada simples os elementos são retirados na ordem em que foram adicionados (primeiro a entrar,
+                    primeiro a sair), em uma fila de prioridade FIFO, cada elemento possui uma prioridade associada e os
+                    elementos são retirados não apenas na ordem em que foram adicionados, mas também levando em
+                    consideração sua prioridade.
+
+                </p>
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+    </div> <!-- end of container -->
 
     <!-- Footer -->
     <div class="footer">
