--- a/web/lista.html
+++ b/web/lista.html
@@ -66,7 +66,7 @@
                         <a class="nav-link page-scroll" href="index.php#details">Manual de Instalação</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#quiz">Quiz</a>
+                        <a class="nav-link page-scroll" href="./quiz/index.php">Quiz</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
