add links on dropdown of all the pages

--- a/web/arvoreAvl.html
+++ b/web/arvoreAvl.html
@@ -71,19 +71,27 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">Assuntos</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item page-scroll" href="tad.html">TAD</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="lista.html">Listas Simples</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="listaDupla.html">Lista Dupla</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="pilhaEncadeada.html">Pilha Encadeada</a>
-                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-menu" aria-labelledby="dropdown01">
+                                <a class="dropdown-item page-scroll" href="tad.html">TAD</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="lista.html">Listas Simples</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="listaDupla.html">Lista Dupla</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="pilhaEncadeada.html">Pilha Encadeada</a>
+                                <div class="dropdown-divider"></div>
                                 <a class="dropdown-item page-scroll" href="arvoreBi.html">Árvore Binária de Busca</a>
-                        </div>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="arvoreB.html">Árvore B</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="arvoreTrie.html">Árvore Trie</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="arvoreAvl.html">Árvore AVL</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="arvoreRubro.html">Árvore Rubro-Negra</a>
+                            </div>
                     </li>
                 </ul>
 
