--- a/web/arvoreBi.html
+++ b/web/arvoreBi.html
@@ -82,7 +82,15 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item page-scroll" href="pilhaEncadeada.html">Pilha Encadeada</a>
                             <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="arvoreBi.html">Árvore Binária de Busca</a>
+                            <a class="dropdown-item page-scroll" href="arvoreBi.html">Árvore Binária de Busca</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="arvoreB.html">Árvore B</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="arvoreTrie.html">Árvore Trie</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="arvoreAvl.html">Árvore AVL</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="arvoreRubro.html">Árvore Rubro-Negra</a>
                         </div>
                     </li>
                 </ul>
