--- a/web/arvoreB.html
+++ b/web/arvoreB.html
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>Árvore Binária de Busca</title>
+    <title>Árvore B</title>
 
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600&display=swap"
@@ -71,19 +71,27 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">Assuntos</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item page-scroll" href="tad.html">TAD</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="lista.html">Listas Simples</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="listaDupla.html">Lista Dupla</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="pilhaEncadeada.html">Pilha Encadeada</a>
-                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-menu" aria-labelledby="dropdown01">
+                                <a class="dropdown-item page-scroll" href="tad.html">TAD</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="lista.html">Listas Simples</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="listaDupla.html">Lista Dupla</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="pilhaEncadeada.html">Pilha Encadeada</a>
+                                <div class="dropdown-divider"></div>
                                 <a class="dropdown-item page-scroll" href="arvoreBi.html">Árvore Binária de Busca</a>
-                        </div>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="arvoreB.html">Árvore B</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="arvoreTrie.html">Árvore Trie</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="arvoreAvl.html">Árvore AVL</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="arvoreRubro.html">Árvore Rubro-Negra</a>
+                            </div>
                     </li>
                 </ul>
 
@@ -98,7 +106,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <h1>Árvore Binária de Busca</h1>
+                    <h1>Árvore B</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
