--- a/web/arvoreBi.html
+++ b/web/arvoreBi.html
@@ -120,11 +120,24 @@
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
                     <div class="text-box cmb-5">
-                        <p class="p-large">Uma fila encadeada FIFO (First-In-First-Out) é uma estrutura de dados que
-                            funciona como uma fila da vida real, onde o primeiro elemento adicionado é o primeiro
-                            a ser removido.
-                            A seguir vou mostrar como criar, adicionar e remover um nó de uma fila encadeada.</p>
-                    </div> <!-- end of text-box -->
+                        <p class="p-large">Uma árvore binária de busca é uma estrutura de dados que representa um 
+                            conjunto ordenado de elementos. Cada elemento da árvore é armazenado em um nó, que 
+                            contém uma chave e um valor. A chave é usada para ordenar os elementos da árvore, 
+                            e o valor é o dado associado à chave.</p>
+                    </div> 
+                    <div class="text-box cmb-5">
+                        <p class="p-large">As operações básicas de uma árvore binária de busca são:<br>
+                            •	Inserção: Insere um novo elemento na árvore.<br>
+                            •	Busca: Encontra um elemento na árvore a partir de sua chave.<br>
+                            •	Remoção: Remove um elemento da árvore.<br><br>
+                            A ordem dos elementos em uma árvore binária de busca é definida da seguinte forma:<br>
+                            A chave de cada nó da subárvore esquerda deve ser menor ou igual à chave do nó pai.
+                            A chave de cada nó da subárvore direita deve ser maior ou igual à chave do nó pai.
+                            Essa ordem garante que a busca por um elemento na árvore possa ser feita de forma eficiente, 
+                            usando o algoritmo de busca binária.
+                            </p>
+                    </div>
+                    <!-- end of text-box -->
 
 
                     <h2 class="mt-3 mb-4">Exemplo</h2>
