--- a/web/arvoreTrie.html
+++ b/web/arvoreTrie.html
@@ -71,27 +71,27 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">Assuntos</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown01">
-                                <a class="dropdown-item page-scroll" href="tad.html">TAD</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="lista.html">Listas Simples</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="listaDupla.html">Lista Dupla</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="pilhaEncadeada.html">Pilha Encadeada</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="arvoreBi.html">Árvore Binária de Busca</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="arvoreB.html">Árvore B</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="arvoreTrie.html">Árvore Trie</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="arvoreAvl.html">Árvore AVL</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item page-scroll" href="arvoreRubro.html">Árvore Rubro-Negra</a>
-                            </div>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item page-scroll" href="tad.html">TAD</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="lista.html">Listas Simples</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="listaDupla.html">Lista Dupla</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="fila.html">Fila FIFO</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="pilhaEncadeada.html">Pilha Encadeada</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="arvoreBi.html">Árvore Binária de Busca</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="arvoreB.html">Árvore B</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="arvoreTrie.html">Árvore Trie</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="arvoreAvl.html">Árvore AVL</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="arvoreRubro.html">Árvore Rubro-Negra</a>
+                        </div>
                     </li>
                 </ul>
 
@@ -120,10 +120,23 @@
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
                     <div class="text-box cmb-5">
-                        <p class="p-large">Uma fila encadeada FIFO (First-In-First-Out) é uma estrutura de dados que
-                            funciona como uma fila da vida real, onde o primeiro elemento adicionado é o primeiro
-                            a ser removido.
-                            A seguir vou mostrar como criar, adicionar e remover um nó de uma fila encadeada.</p>
+                        <p class="p-large">Uma árvore Trie é uma estrutura de dados usada para representar conjuntos de
+                            strings.
+                            Cada nó da árvore representa um prefixo de uma string no conjunto.<br><br>
+
+                            As operações básicas de uma árvore Trie são:<br>
+                            • Inserção: Insere uma nova string no conjunto.<br>
+                            • Busca: Encontra uma string no conjunto.<br>
+                            • Comparação: Compara duas strings.<br><br>
+
+                            As árvores Tries são usadas em uma variedade de aplicações, incluindo:<br>
+                            • Correio eletrônico: Armazena a lista de endereços de e-mail de um usuário.<br>
+                            • Processamento de linguagem natural: Armazena o vocabulário de uma língua.<br>
+                            • Busca de texto: Armazena o índice de um texto.<br>
+
+
+
+                        </p>
                     </div> <!-- end of text-box -->
 
 
